--- a/spectrum-of-use.html
+++ b/spectrum-of-use.html
@@ -5,6 +5,7 @@
   <title>SMM & Area Drug Strategy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/substance-use.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
 </head>
@@ -29,7 +30,7 @@
         </ul>
       </nav>
     </div>
-    <img src="images/banner-homepage.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
+    <img src="images/banner-page2.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
   </header>
   <main>
     <ol class="page-nav-1">
@@ -44,14 +45,26 @@
     <article>
       <div class="spectrum-info" id="spectrum-info">
         <h1>The Spectrum of Substance Use</h1>
-        <h3>Responsible Use:</h3>
+        <div class="spectrum-h3 green-square">
+          <img src="images/square-green.jpg" alt="a green square">
+          <h3>Responsible Use:</h3>
+        </div>
         <p>Typically has positive health or social effects when taken as prescribed by a health care provider to an individual or as recommended.</p>
         <h2>HIGH RISK OF OVERDOSE</h2>
-        <h3>Casual, Recreational, or Experimental Use:</h3>
+        <div class="spectrum-h3 yellow-square">
+          <img src="images/square-yellow.jpg" alt="a yellow square">
+          <h3>Casual, Recreational, or Experimental Use:</h3>
+        </div>
         <p>Individuals perceive health or social benefit of the substance to enhance performance or social networking. The high-risk behaviour is often seen as socially acceptable, integral to the “party scene”, and largely driven by movie or tv portrayal.</p>
-        <h3>Problematic Use:</h3>
+        <div class="spectrum-h3 orange-square">
+          <img src="images/square-orange.jpg" alt="an orange square">
+          <h3>Problematic Use:</h3>
+        </div>
         <p>The impact of substance use extends beyond the individual to family, friends, colleagues, and community. The definition of problematic use is not limited to the frequency of consumption rather it recognizes the behaviour or impaired decision making associated to the substance use. A person may continue to be a high functioning member of society and struggle with substance use in silence.</p>
-        <h3>Substance Use Disorder (SUD):</h3>
+        <div class="spectrum-h3 red-square">
+          <img src="images/square-red.jpg" alt="an red square">
+          <h3>Substance Use Disorder (SUD):</h3>
+        </div>
         <p>Use that has become habitual and compulsive despite negative health and social effects. Substance use disorders significantly impact health, wealth, home, friends, and family. Dangerous misconceptions regarding who is at risk of an overdose is often related to a person with a SUD due to historical, inaccurate, and often offensive stereotypes.</p>
       </div>
       <div class="concurrent-dis" id="concurrent-dis">
@@ -63,6 +76,7 @@
         <h2>Prevalence of Concurrent Disorders in Canada:</h2>
         <p>People with a mental illness are twice as likely to have a substance use problem compared to the general population. At least 20% of people with a mental illness have a co-occurring substance use problem.</p>
         <p>“People with substance use problems are up to 3 times more likely to have a mental illness. More than 15% of people with a substance use problem have a co-occurring mental illness” (CMHA, “Fast Facts about Mental Illness,” n.d.).</p>
+        <img src="images/concurrent-image.jpg" alt="image of a graffitti covered wall, text on wall says punk poets never die">
       </div>
       <div class="algoma-insights" id="algoma-insights">
         <div class="algoma-insights-text">
@@ -82,64 +96,84 @@
             <li>A history of mental health concerns, substance use disorder, trauma, and stigma</li>
           </ul>
         </div>
-        <div class="social-determinants" id="social-determinants">
-          <h2>The Social Determinants of Health</h2>
-          <p>The social determinants of health are often considered to be ‘at the heart’ of problematic substance use. These determinants are a broad range of personal, social, economic and environmental factors that influence health. Some of these include income, social status, employment, housing, education, childhood experiences, physical environment, social supports, access to health services, and culture. Along with the determinants of health, are multiple personal and environmental risk factors in life that can lead someone to engage in substance use behaviours.</p>
-          <p>Some examples of these risk factors include: exposure to problematic substance use in the home, exposure to abuse or trauma, adverse childhood experiences, poor academic achievement, loss of employment, coping ability, and availability of substances. Addressing these root causes of substance use can support healthy behaviours and help to reduce the possibility of substance use in our communities.</p>
-        </div>
-        <div class="protective-factors" id="protective-factors">
-          <h2>Protective Factors</h2>
-          <p>Substance use prevention often focuses on strengthening protective factors, in order to reduce the individual and environmental risk factors. Some examples include:</p>
-          <ul>
-            <li>Building healthy family & peer relationships</li>
-            <li>Providing supportive school & work environments</li>
-            <li>Improving community connections & cultural supports.</li>
-            <li>Improving individual coping skills to manage stress, emotional trauma, etc.</li>
-          </ul>
-        </div>
-        <div class="risk-factors" id="risk-factors">
-          <h2>Risk Factors Related to Substance Use Disorders</h2>
-          <div class="trauma">
-            <img src="" alt="">
-            <h3>Trauma</h3>
+      </div>
+      <img class="crowd-img" src="images/page-2-crowd.jpg" alt="">
+      <div class="social-determinants" id="social-determinants">
+        <h2>The Social Determinants of Health</h2>
+        <p>The social determinants of health are often considered to be ‘at the heart’ of problematic substance use. These determinants are a broad range of personal, social, economic and environmental factors that influence health. Some of these include income, social status, employment, housing, education, childhood experiences, physical environment, social supports, access to health services, and culture. Along with the determinants of health, are multiple personal and environmental risk factors in life that can lead someone to engage in substance use behaviours.</p>
+        <p>Some examples of these risk factors include: exposure to problematic substance use in the home, exposure to abuse or trauma, adverse childhood experiences, poor academic achievement, loss of employment, coping ability, and availability of substances. Addressing these root causes of substance use can support healthy behaviours and help to reduce the possibility of substance use in our communities.</p>
+      </div>
+      <div class="protective-factors" id="protective-factors">
+        <h2>Protective Factors</h2>
+        <p>Substance use prevention often focuses on strengthening protective factors, in order to reduce the individual and environmental risk factors. Some examples include:</p>
+        <ul>
+          <li>Building healthy family & peer relationships</li>
+          <li>Providing supportive school & work environments</li>
+          <li>Improving community connections & cultural supports.</li>
+          <li>Improving individual coping skills to manage stress, emotional trauma, etc.</li>
+        </ul>
+      </div>
+      <div class="risk-factors" id="risk-factors">
+        <h2>Risk Factors Related to Substance Use Disorders</h2>
+        <div class="risk-factors-grid">
+          <div class="factors trauma">
+            <div class="risk-icon">
+              <img src="images/trauma-icon.jpg" alt="an exclaimation point">
+              <h3>Trauma</h3>
+            </div>
             <p>Youth with a history of child welfare involvement are particularly at risk, as the initial transition out of foster care is associated with increased rates of problematic substance use (Health Canada, 2018).</p>
           </div>
-          <div class="mental-health">
-            <img src="" alt="">
-            <h3>Mental Health</h3>
+          <div class="factors mental-health">
+            <div class="risk-icon">
+              <img src="images/mental-health-icon.jpg" alt="a semi-colon symbol">
+              <h3>Mental Health</h3>
+            </div>
             <p>People with a mental illness are twice as likely to experience problematic substance use compared to the general population (Health Canada, 2018).</p>
           </div>
-          <div class="indigenous-people">
-            <img src="" alt="">
-            <h3>Indigenous People</h3>
+          <div class="factors indigenous-people">
+            <div class="risk-icon">
+              <img src="images/first-nations-icon.jpg" alt="a eagle feather">
+              <h3>Indigenous People</h3>
+            </div>
             <p>Indigenous peoples are at greater risk of experiencing mental health and substance use issues due to multiple factors, including the intergenerational effects of residential schools, and other devastating consequences of colonization (Health Canada, 2018).</p>
           </div>
-          <div class="youth">
-            <img src="" alt="">
-            <h3>Youth</h3>
+          <div class="factors youth">
+            <div class="risk-icon">
+              <img src="images/youth-icon.jpg" alt="a leaf">
+              <h3>Youth</h3>
+            </div>
             <p>Youth aged 15 to 24 are more likely to experience substance use related harm, have the highest rates of problem substance use nationally, & illegal drug use last year. Young Adults 18 to 25 have the highest binge drinking rates (Health Canada, 2018).</p>
           </div>
-          <div class="homelessness">
-            <img src="" alt="">
-            <h3>Homelessness</h3>
+          <div class="factors homelessness">
+            <div class="risk-icon">
+              <img src="images/homeless-icon.jpg" alt="a house with a line through it">
+              <h3>Homelessness</h3>
+            </div>
             <p>Those experiencing homelessness have a much higher rate of problematic substance use compared to the general Canadian population (Health Canada, 2018).</p>
           </div>
-          <div class="grief">
-            <img src="" alt="">
-            <h3>Injury, grief, isolation</h3>
+          <div class="factors grief">
+            <div class="risk-icon">
+              <img src="images/grief-icon.jpg" alt="a broken heart">
+              <h3>Injury, grief, isolation</h3>
+            </div>
             <p>Older Canadians are vulnerable to problematic substance use due to unique risk factors such as chronic physical conditions, unexpected or forced retirements, social isolation, and bereavement (Health Canada, 2018).</p>
           </div>
-          <div class="gender">
-            <img src="" alt="">
-            <h3>Gender</h3>
+          <div class="factors gender">
+            <div class="risk-icon">
+              <img src="images/gender-icon.jpg" alt="the symbols for male and female genders and a plus symbol">
+              <h3>Gender</h3>
+            </div>
             <p>Men are more likely than women to use illicit substances and are less likely to seek support and assistance. Women tend to have lower levels of use than men, but they are more likely to develop related health problems. In 2017, the majority of accidental apparent opioid-related deaths occurred among males (78%) (Health Canada, 2018).</p>
           </div>
-          <div class="sexuality">
-            <img src="" alt="">
-            <h3>Sexuality</h3>
+          <div class="factors sexuality">
+            <div class="risk-icon">
+              <img src="images/sexuality-icon.jpg" alt="the symbol for hederosexual sexuality and a plus icon">
+              <h3>Sexuality</h3>
+            </div>
             <p>Evidence shows that gay, lesbian and bisexual individuals are at higher risk of problematic substance use compared to heterosexual individuals. For example, gay, lesbian and bisexual adolescents have been found to be 2 to 4 times more likely to use substances and lesbian and gay adults have been shown to experience higher rates of heavy drinking, compared to their heterosexual counterparts (Health Canada, 2018).</p>
           </div>
         </div>
+      </div>
     </article>
   </main>
   <footer>
