shape sub nav 3

--- a/spectrum-of-use.html
+++ b/spectrum-of-use.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </div>
-    <img src="images/banner-page2.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
+    <img src="images/banner-page2.jpg" alt="overview of the Station Mall parking lot">
   </header>
   <main>
     <ol class="page-nav-1">
