--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -5,6 +5,7 @@
   <title>SMM & Area Drug Strategy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/algoma.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
 </head>
@@ -37,9 +38,9 @@
       <li><a class="btn btn-2" href="#algoma-critical-insights">Algoma Substance Use Critical Insights</a></li>
       <li><a class="btn btn-3" href="#pregnancy-use">Substance Use During Pregnancy</a></li>
       <li><a class="btn btn-4" href="#blood-borne">Blood-Borne Infections Related to Substance Use</a></li>
-      <li><a class="btn btn-5" href="#youth-cannabis-use">Youth Canabis Use in Algoma</a></li>
+      <li><a class="btn btn-5" href="#">Informant Interview Statements</a></li>
       <li><a class="btn btn-6" href="#">Informant Interview Insights</a></li>
-      <li><a class="btn btn-7" href="#">Informant Interview Statements</a></li>
+      <li><a class="btn btn-7" href="#youth-cannabis-use">Youth Canabis Use in Algoma</a></li>
     </ol>
   <article>
     <div class="use-in-algoma" id="use-in-algoma">
