--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
     </div>
-    <img src="images/banner-homepage.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
+    <img src="images/banner-page3.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
   </header>
   <main>
     <ol class="page-nav-1">
