Create bar graph

--- a/bar-chart.html
+++ b/bar-chart.html
@@ -10,5 +10,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Source+Sans+Pro:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
-  <rect class="box" x="0" y="0" width="256" height="64" />
+
+
+  <div class="chart meters">
+    <div class="bar">
+      <label for="bar-1"><e>39.7</e> Used any illicit substance</label>
+      <meter id="bar-1" value="39.7" min="0" max="50"></meter><br>
+      <label for="bar-2"><e>44.4</e> Used canabis more than once</label>
+      <meter id="bar-2" value="44.4" min="0" max="50"></meter><br>
+      <label for="bar-3"><e>10</e> Used cocaine</label>
+      <meter id="bar-3" value="10" min="0" max="50"></meter><br>
+      <label for="bar-4"><e>4.8</e> Used amphetamine or speed</label>
+      <meter id="bar-4" value="4.8" min="0" max="50"></meter><br>
+      <label for="bar-5"><e>13.2</e> Used hailucinogens</label>
+      <meter id="bar-5" value="13.2" min="0" max="50"></meter><br>
+      <label for="bar-6"><e>1.3</e> Used solvents</label>
+      <meter id="bar-6" value="1.3" min="0" max="50"></meter><br>
+    </div>
+  </div>
 </body>
