--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -53,9 +53,24 @@
         <p class="4-in-10">Nearly 4 out of 10 Algoma residents have used an illicit drug in their lifetime (APH, 2018)</p>
         <p class="4-in-10">4 out of 10 Algoma residents have used cannabis more than once in their lifetime (APH, 2018).</p>
       </div>
-      <div>
-        <p>Out of 50 Used any illcit substance 39.7 Used cannabis more than once 44.4 Used cocaine 10 Used amphetamine or speed 4.8 Used hailucinogens 13.2 Used solvents 1.3</p>
-      </div>
+      <section>
+        <div class="chart meters">
+          <div class="bar">
+            <label for="bar-1"><e>39.7</e> Used any illicit substance</label>
+            <meter id="bar-1" value="39.7" min="0" max="50"></meter><br>
+            <label for="bar-2"><e>44.4</e> Used canabis more than once</label>
+            <meter id="bar-2" value="44.4" min="0" max="50"></meter><br>
+            <label for="bar-3"><e>10</e> Used cocaine</label>
+            <meter id="bar-3" value="10" min="0" max="50"></meter><br>
+            <label for="bar-4"><e>4.8</e> Used amphetamine or speed</label>
+            <meter id="bar-4" value="4.8" min="0" max="50"></meter><br>
+            <label for="bar-5"><e>13.2</e> Used hailucinogens</label>
+            <meter id="bar-5" value="13.2" min="0" max="50"></meter><br>
+            <label for="bar-6"><e>1.3</e> Used solvents</label>
+            <meter id="bar-6" value="1.3" min="0" max="50"></meter><br>
+          </div>
+        </div>
+      </section>
     </div>
     <div class="algoma-critical-insights" id="algoma-critical-insights">
       <h2>Algoma Substance Use Critical Insights</h2>
