add css to page 3

--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -50,52 +50,61 @@
       </div>
       <div class="use-in-algoma-facts">
         <p>The majority of Algoma residents report staying away from illicit drugs (APH, 2018)</p>
-        <p class="4-in-10">Nearly 4 out of 10 Algoma residents have used an illicit drug in their lifetime (APH, 2018)</p>
-        <p class="4-in-10">4 out of 10 Algoma residents have used cannabis more than once in their lifetime (APH, 2018).</p>
+        <div class="four-in-ten-left">
+          <h2 class="margin-bottom-zero">4 in 10</h2>
+          <p class="margin-bottom-top">Nearly 4 out of 10 Algoma residents have used an illicit drug in their lifetime (APH, 2018)</p>
+        </div>
+        <div class="four-in-ten-right">
+          <h2 class="margin-bottom-zero">4 in 10</h2>
+          <p class="margin-bottom-top">4 out of 10 Algoma residents have used cannabis more than once in their lifetime (APH, 2018).</p>
+        </div>
       </div>
       <section>
         <div class="chart meters">
           <div class="bar">
-            <label for="bar-1"><e>39.7</e> Used any illicit substance</label>
+            <label class="bar-label" for="bar-1"><e>39.7</e> Used any illicit substance</label>
             <meter id="bar-1" value="39.7" min="0" max="50"></meter><br>
-            <label for="bar-2"><e>44.4</e> Used canabis more than once</label>
+            <label class="bar-label" for="bar-2"><e>44.4</e> Used canabis more than once</label>
             <meter id="bar-2" value="44.4" min="0" max="50"></meter><br>
-            <label for="bar-3"><e>10</e> Used cocaine</label>
+            <label class="bar-label" for="bar-3"><e>10</e> Used cocaine</label>
             <meter id="bar-3" value="10" min="0" max="50"></meter><br>
-            <label for="bar-4"><e>4.8</e> Used amphetamine or speed</label>
+            <label class="bar-label" for="bar-4"><e>4.8</e> Used amphetamine or speed</label>
             <meter id="bar-4" value="4.8" min="0" max="50"></meter><br>
-            <label for="bar-5"><e>13.2</e> Used hailucinogens</label>
+            <label class="bar-label" for="bar-5"><e>13.2</e> Used hailucinogens</label>
             <meter id="bar-5" value="13.2" min="0" max="50"></meter><br>
-            <label for="bar-6"><e>1.3</e> Used solvents</label>
+            <label class="bar-label" for="bar-6"><e>1.3</e> Used solvents</label>
             <meter id="bar-6" value="1.3" min="0" max="50"></meter><br>
           </div>
         </div>
       </section>
     </div>
-    <div class="algoma-critical-insights" id="algoma-critical-insights">
+    <div class="algoma-critical-insights div-space" id="algoma-critical-insights">
       <h2>Algoma Substance Use Critical Insights</h2>
       <p>Ranked #1 as the highest rate of opioid poisoning related emergency department visits compared in Ontario and Alberta with a population of 50,000 - 99,999 (CIHI, 2018).</p>
       <p>Ranked #8 in the top 15 highest number of opioid poisoning hospitalizations by census subdivision, Canada, 2017 (CIHI, 2018).</p>
       <p>There were 22 deaths due to opioid overdoses in Algoma in 2017 (Public Health, 2018).</p>
       <p>2017 Opioid-Related Deaths per 100,000 for Algoma 19.1% - Double the province rate of 8.9% (APH, 2018).</p>
     </div>
-    <div class="youth-cannabis-use" id="youth-cannabis-use">
+    <div class="youth-cannabis-use div-space" id="youth-cannabis-use">
       <h2>Youth Cannabis Use in Algoma</h2>
       <p>Algoma Youth are struggling with unhealthy behaviours such as smoking/vaping tobacco and cannabis. (APH, 2018).</p>
       <p>28.3% of Algoma youth aged 12 to 19 years old have tried cannabis. In Ontario overall, 22.9% of youth have tried cannabis APH, 2018).</p>
     </div>
-    <div class="pregnancy-use" id="pregnancy-use">
+    <div class="pregnancy-use div-space" id="pregnancy-use">
       <h2>Substance Use During Pregnancy</h2>
       <p>6.1% of Algoma mothers use alcohol or drugs during pregnancy (APH, 2018). This is comparable to 4.3% of mothers in Ontario. Alcohol and drug use during a pregnancy can lead to fetal alcohol spectrum disorder (FASD) and other serious pregnancy and birth complications (APH, 2018). 1 in 4 Algoma mothers experienced a mental health challenge during a pregnancy or postpartum, most commonly anxiety and/or depression (APH, 2018) This is a higher proportion of mothers compared to Ontario (25.6%versus 15.8%).</p>
     </div>
-    <div class="blood-borne" id="blood-borne">
+    <div class="blood-borne div-space" id="blood-borne">
       <h2>Blood-Borne Infections Related to Substance Use</h2>
       <p>In 2017, there were 83 people diagnosed with Hepatitis C in Algoma, which was the highest number of new cases in a year since 2008 (APH, 2018)</p>
       <p>During the 5-year period between 2013 and 2017, Algoma’s rate* of new hepatitis C cases was the highest in the Northeast and in Ontario (APH, 2018) (APH Report: Hepatitis C in Algoma and Ontario. http://www.algomapublichealth.com/media/2307/2017-januarybulletin-algoma-heptatits-c-final.pdf)</p>
     </div>
-    <div class="informant-insights" id="informant-insights">
+    <div class="page-three-img">
+      <img src="images/page3-image.jpg" alt="">
+    </div>
+    <div class="informant-insights div-space" id="informant-insights">
       <div class="informant-insights-text">
-        <h2>nformant Interview Insights</h2>
+        <h2>Informant Interview Insights</h2>
         <p>Community Readiness - No Awareness or Resistance: Some community members do not feel opioids are an issue or are unaware of the problem while some community members know substance use is an issue across Canada but there is little recognition of the local opioid crisis.</p>
         <p>Community members accessing help have difficulty understanding the clinical language describing the various program treatment and wraparound treatment processes. (i.e., websites, information documents)</p>
         <p>Overdose Risk Awareness: Prescribed, Casual, Recreational, or Experimental substance use related overdose risks are overlooked and are often considered socially acceptable. The dangerously inaccurate historical stereotype “addict” drives the perceived risk related to substance use morbidity and mortality.</p>
@@ -105,12 +114,17 @@
         <p>Limited available relevant, timely, measurable local captured data and surveillance information related to mental health and substance use. (i.e., the number of people impacted, waiting for service, who are leaving the community to access services, completing treatment, etc.)</p>
         <p>Inconsistent alert response public advisory notice related to increased overdose frequency.</p>
       </div>
-      <div class="informant-insights-quote">
+      <div class="informant-insights-quote div-space">
         <h2>The Social Media Narrative</h2>
         <p>Social media activism can drive misinformation, distort public understanding, and disrupt support.</p>
         <p>The lack of civility can increase polarization.</p>
         <p>Comments can be readily enforced because of the lack of viewpoints and critique of ideas.</p>
         <p>Misinformation can be easily shared to generate a large audience further escalating discrimination and stigma around substance use.</p>
+      </div>
+      <div class="informant-statements-imgs div-space">
+        <img class="image-one" src="images/statements-img1" alt="">
+        <img class="image-two" src="images/statements-img2" alt="">
+        <img class="image-three" src="images/statements-img3" alt="">
       </div>
       <div class="informant-statements" id="informant-statements">
         <h2>Informant Interview Statements</h2>
@@ -126,9 +140,7 @@
         <p>My withdrawals from heroin are so awful, I have done things I never thought I would ever do just to get money to buy more.</p>
         <p>It’d be nice to use clean needles but it’s not worth the bus rides.</p>
         <h3>I am in recovery - all the services in place to help are downtown! That’s exactly where I don’t want to go... that’s where the temptation is.</h3>
-
       </div>
-
     </div>
 
   </article>
