update sub nav ids

--- a/spectrum-of-use.html
+++ b/spectrum-of-use.html
@@ -72,7 +72,7 @@
         <p>The Canadian Center on Substance Use & Addictions (CCSA) defines concurrent disorders as “the term applied to mental health and substance use problems that occur together. The links between mental health and substance use problems are complex. These problems can develop independently as a result of common risk factors or one can lead to the other as a result of self-medication or prolonged distress” (“Mental Health and Problematic Substance Use,” CCSA, 2018).</p>
         <p>Until recently, Canada’s mental health and addiction treatment systems have been segregated. People were often diagnosed with one disorder but not the other, resulting in a failure to treat both problems together (CCSA, 2018).</p>
       </div>
-      <div class="concurrent-dis-canada">
+      <div class="concurrent-dis-canada" id="concurrent-dis-canada">
         <h2>Prevalence of Concurrent Disorders in Canada:</h2>
         <p>People with a mental illness are twice as likely to have a substance use problem compared to the general population. At least 20% of people with a mental illness have a co-occurring substance use problem.</p>
         <p>“People with substance use problems are up to 3 times more likely to have a mental illness. More than 15% of people with a substance use problem have a co-occurring mental illness” (CMHA, “Fast Facts about Mental Illness,” n.d.).</p>
