--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>SMM & Area Drug Strategy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="favicon.ico" rel="shortcut icon">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/intro.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
