--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>SMM & Area Drug Strategy</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="favicon.ico" rel="icon" type="image/png">
+  <link href="favicon.ico" rel="shortcut icon">
+  <link href="favicon-196.png" rel="icon" type="image/png">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/intro.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -65,7 +66,7 @@
         <p>Opioids that are not prescribed to you but are taken from someone else (Canada, “Opioids and the opioid crisis – Get the facts,” 2019). (Health Canada, 2019).</p>
       </div>
       <div class="naloxone-img">
-        <figure>
+        <figure role="group">
           <img src="images/homepage-naloxone.jpg" alt="Image of naloxone kit">
           <figcaption>Naloxone is a fast-acting drug used to temporarily reverse the effects of opioid overdoses. <a href="https://www.canada.ca/en/health-canada/services/substance-use/problematic-prescription-drug-use/opioids/naloxone.html">Learn more about Naloxone kits in Canada.</a></figcaption>
         </figure>
@@ -78,7 +79,7 @@
         <p>(“Fentanyl’s Deadly Path: How the powerful drug gets through Canada’s border”, 2018)</p>
       </div>
       <div class="escalaing-fentanyl-crisis-img">
-        <figure>
+        <figure role="group">
           <img src="images/homepage-pills-in-hand.jpg" alt="Two hands cradling a pile of white round pills on a table">
           <figcaption>"According to The Royal Canadian Mounted Police (RCMP) fentanyl is a synthetic opioid more than one hundred times more powerful than morphine."</figcaption>
         </figure>
@@ -90,7 +91,7 @@
         <p>Unintentional exposure to pure fentanyl – touching or inhaling – can cause serious harm including death (Comeau, 2018). Fentanyl-related deaths have been increasing in Canada (Drug Free Kids Canada, n.d.)</p>
       </div>
       <div class="hidden-dangers-img">
-        <figure>
+        <figure role="group">
           <img src="images/homepage-lethal-dose.jpg" alt="Two milligrams of fentanyl beside a penny">
           <figcaption>"Two milligrams of pure fentanyl (the size of about 4 grains of salt) is enough to kill the average adult." Source Fentanyl. (n.d.). Retrieved November 24, 2020, from <a href="https://www.dea.gov/galleries/drug-images/fentanyl">www.dea.gov</a></figcaption>
         </figure>
@@ -152,16 +153,20 @@
       </div>
     </article>
   </main>
-  <footer>
-    <div class="footer-content">
-      <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
-      <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
-      <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
-      <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
+  <footer role="contentinfo">
+    <section>
+      <div class="footer-section">
+        <div class="footer-text">
+          <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
+          <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
+          <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
+          <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
+        </div>
+      </div>
+    </section>
+    <div class="footer-bar">
+      <small>Web Design by Holly Drew</small>
     </div>
   </footer>
-  <div class="footer-bar">
-    <small>Web Design by Holly Drew</small>
-  </div>
 </body>
 </html>
