update footer & acccess

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
       <nav role="navigation" id="nav" tabindex="0">
         <input type="checkbox" class="nav-check" id="nav-check">
-        <label class="nav-label" for="nav-check">
+        <label for="nav-check" class="nav-label">Main Navigation
           <img class="nav-open img-flex" src="images/hamburger-icon.png" alt="Open Navigation">
           <img class="nav-close img-flex" src="images/close-icon.png" alt="Close Navigation">
         </label>
@@ -154,16 +154,12 @@
     </article>
   </main>
   <footer role="contentinfo">
-    <section>
-      <div class="footer-section">
-        <div class="footer-text">
-          <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
-          <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
-          <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
-          <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
-        </div>
-      </div>
-    </section>
+    <div class="footer-section">
+      <img src="images/logo.png" alt="logo reads S S M and area drug strategy">
+      <p>This was created for educational purposes for Algonquin College. This is not my own written content. All information provided is from:</p>
+      <p>The SSM & Area Drug Strategy, Community Call to Action, 2019. Sault Ste. Marie (ON): SSMADS; 2019</p>
+      <a href="file:///Users/hollydrew/Desktop/OneDrive%20-%20Algonquin%20College/1.%20Semester%202/2.%20Web%20Design%202/Independent%20Project%20Plan/Sault-and-Area-Drug-Strategy-Full-Report-FINAL.pdf">Read the full report.</a>
+    </div>
     <div class="footer-bar">
       <small>Web Design by Holly Drew</small>
     </div>
