--- a/spectrum-of-use.html
+++ b/spectrum-of-use.html
@@ -98,7 +98,7 @@
           </ul>
         </div>
       </div>
-      <img class="crowd-img" src="images/page-2-crowd.jpg" alt="">
+      <img class="crowd-img" src="images/page-2-crowd.jpg" alt="image from inside a crowd of people walking">
       <div class="social-determinants" id="social-determinants">
         <h2>The Social Determinants of Health</h2>
         <p>The social determinants of health are often considered to be ‘at the heart’ of problematic substance use. These determinants are a broad range of personal, social, economic and environmental factors that influence health. Some of these include income, social status, employment, housing, education, childhood experiences, physical environment, social supports, access to health services, and culture. Along with the determinants of health, are multiple personal and environmental risk factors in life that can lead someone to engage in substance use behaviours.</p>
