--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -103,7 +103,7 @@
         <p>During the 5-year period between 2013 and 2017, Algoma’s rate* of new hepatitis C cases was the highest in the Northeast and in Ontario (APH, 2018) (APH Report: Hepatitis C in Algoma and Ontario. <a href="http://www.algomapublichealth.com/media/2307/2017-januarybulletin-algoma-heptatits-c-final.pdf">Algoma Public Health</a>)</p>
       </div>
       <div class="page-three-img">
-        <img src="images/page3-image.jpg" alt="">
+        <img src="images/page3-image.jpg" alt="image of Queen Street sidewalk">
       </div>
       <div class="informant-insights div-space" id="informant-insights">
         <div class="informant-insights-text">
@@ -125,9 +125,9 @@
           <p>Misinformation can be easily shared to generate a large audience further escalating discrimination and stigma around substance use.</p>
         </div>
         <div class="informant-statements-imgs div-space">
-          <img class="image-one" src="images/statements-img1" alt="">
-          <img class="image-two" src="images/statements-img2" alt="">
-          <img class="image-three" src="images/statements-img3" alt="">
+          <img class="image-one" src="images/statements-img1.jpg" alt="sault alley">
+          <img class="image-two" src="images/statements-img2.jpg" alt="image of Queen Street near the GFL Memorial Gardens">
+          <img class="image-three" src="images/statements-img3.jpg" alt="image of Queen Street outside Erie's coffee shop">
         </div>
         <div class="informant-statements" id="informant-statements">
           <h2>Informant Interview Statements</h2>
