--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav role="navigation" id="nav" tabindex="0">
         <input type="checkbox" class="nav-check" id="nav-check">
         <label for="nav-check" class="nav-label">Main Navigation
-          <img class="nav-open img-flex" src="images/hamburger-icon.png" alt="Open Navigation">
-          <img class="nav-close img-flex" src="images/close-icon.png" alt="Close Navigation">
+          <i><img class="nav-open img-flex" src="images/hamburger-icon.svg" alt="Open Navigation"></i>
+          <i><img class="nav-close img-flex" src="images/close-icon.svg" alt="Close Navigation"></i>
         </label>
         <ul class="nav">
           <li><a class="current" href="index.html">Introduction</a></li>
@@ -99,7 +99,9 @@
       <div class="info-text hospitalizations" id="hospitalizations">
         <div class="hospitalizations-text">
           <h2>Opioid Poisoning: Hospitalizations & Emergency Department Visits</h2>
-          <p>“Apparent Opioid-Related Deaths” Jan to Jun 2018 - Health Canada 2,066 Canadian lives lost to apparent opioid-related death Rates of hospitalizations due to opioid poisoning are highest for patients who live in communities with a population between 50,000 and 99,999 (CIHI, 2018). <br> In 2017, opioid poisoning hospitalization rates in smaller communities were 2.5 times higher than rates in Canada’s largest cities (CIHI, 2018). 2,066 deaths: 94% were accidental. <br> An average of 17 people were hospitalized for opioid poisonings in Canada each day in 2017— an increase from 16 per day in 2016. (Health Canada, 2018)</p>
+          <p>“Apparent Opioid-Related Deaths” Jan to Jun 2018 - Health Canada 2,066 Canadian lives lost to apparent opioid-related death Rates of hospitalizations due to opioid poisoning are highest for patients who live in communities with a population between 50,000 and 99,999 (CIHI, 2018).</p>
+          <p>In 2017, opioid poisoning hospitalization rates in smaller communities were 2.5 times higher than rates in Canada’s largest cities (CIHI, 2018). 2,066 deaths: 94% were accidental.</p>
+          <p>An average of 17 people were hospitalized for opioid poisonings in Canada each day in 2017— an increase from 16 per day in 2016. (Health Canada, 2018)</p>
         </div>
         <img src="images/homepage-medic.jpg" alt="image of the back of an ambulance">
       </div>
